@@ -48,6 +48,7 @@ Curtis Beattie
 Stefan Becker
 Carlos Bederian
 Dave Bell
+Matthew W.S. Bell
 Igor Belyi
 David Benjamin
 Brian Bernas
